<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:layout_weight="49.46" >
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/TotDl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text|none|textNoSuggestions"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/TotUl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text|none|textNoSuggestions"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/Upload"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/refresh"
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/UploadIdButton"
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:text="@string/Upload" />

        <Button
            android:id="@+id/reset"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:text="@string/reset" />
    </LinearLayout>

</LinearLayout>